# ci

./: .gitignore  README.md  apm.lock.yaml  apm.yml  ci.cabal  ci.just  flake.nix  fourmolu.yaml  justfile
.agency/: code-police.md  do.md
.apm/agents/: ci-runtime.md
.apm/skills/ci/: SKILL.md
.apm/skills/ci-runtime/: SKILL.md
.claude/skills/code-police/: SKILL.md
.github/workflows/: ci.yml
app/: Main.hs
src/: Graph.hs  Justfile.hs  Main.hs
src/CI/: CommitStatus.hs  Entrypoint.hs  Executor.hs  Gh.hs  Git.hs  GitHubStatus.hs  Graph.hs  Hosts.hs  Justfile.hs  LogPath.hs  Nix.hs  Node.hs  NodeKind.hs  Observer.hs  Pipeline.hs  Plan.hs  Platform.hs  ProcessCompose.hs  RecipeStep.hs  Resolve.hs  Root.hs  Runner.hs  Scheduler.hs  Sinks.hs  Snapshot.hs  Subprocess.hs  Transport.hs  Verdict.hs
src/CI/Nix/: Splice.hs
src/CI/ProcessCompose/: Events.hs
test/: Spec.hs
test/CI/: JustfileSpec.hs  NodeSpec.hs  PlatformSpec.hs  ProcessComposeSpec.hs  TransportSpec.hs  VerdictSpec.hs
test/fixtures/with-module/: justfile  sub.just
