cabal-version:   3.0
name:            ci
version:         0.1.0.0
license:         NONE
build-type:      Simple

common warnings
    ghc-options: -Wall -threaded

executable ci
    import:           warnings
    main-is:          Main.hs
    other-modules:    CI.CommitStatus
                      CI.Entrypoint
                      CI.Gh
                      CI.Git
                      CI.Graph
                      CI.Justfile
                      CI.Observer
                      CI.Pipeline
                      CI.ProcessCompose
                      CI.Subprocess
    build-depends:
        , aeson
        , algebraic-graphs
        , async
        , base
        , bytestring
        , containers
        , directory
        , filepath
        , network
        , optparse-applicative
        , process
        , text
        , text-display
        , time
        , websockets
        , which
        , yaml
    hs-source-dirs:   src
    default-language: Haskell2010
