cabal-version:   3.0
name:            ci
version:         0.1.0.0
license:         NONE
build-type:      Simple

common warnings
    ghc-options: -Wall -threaded

library
    import:           warnings
    exposed-modules:  CI.CommitStatus
                      CI.Gh
                      CI.Git
                      CI.Graph
                      CI.Justfile
                      CI.Pipeline
                      CI.ProcessCompose
                      CI.ProcessCompose.Events
                      CI.Root
                      CI.Subprocess
                      CI.Verdict
    build-depends:
        , aeson
        , algebraic-graphs
        , async
        , base
        , bytestring
        , containers
        , directory
        , filepath
        , network
        , process
        , text
        , text-display
        , time
        , websockets
        , which
        , yaml
    hs-source-dirs:   src
    default-language: Haskell2010

executable ci
    import:           warnings
    main-is:          Main.hs
    build-depends:
        , base
        , bytestring
        , ci
        , optparse-applicative
        , yaml
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ci-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    CI.JustfileSpec
                      CI.VerdictSpec
    build-depends:
        , base
        , bytestring
        , ci
        , containers
        , hspec
        , text
    hs-source-dirs:   test
    default-language: Haskell2010
